--- a/style.css
+++ b/style.css
@@ -15,3 +15,23 @@
     color: #ebebeb;
     font-size: 15px;
 }
+
+
+
+
+
+
+
+
+
+/* responsive */
+@media (max-width:500px){
+    .top-header p{
+        font-size: 13px;
+    }
+}
+@media (max-width:300px){
+    .top-header p{
+        font-size: 10px;
+    }
+}
