--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .top-header{
     width: 100%;
     height: 30px;
-    background: rgb(56, 109, 56);
+    background: rgb(105 139 105);
     display: flex;
     justify-content: center;
     align-items: center;
