--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@
     font-size: 15px;
 }
 
+.nav-header{
+ width: 100%;
+ height: 60px;
+ background: #ffffff;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding: 20px;
+ box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
 
 
 
