--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
 .top-header{
     width: 100%;
     height: 30px;
@@ -39,7 +45,7 @@
     color: #a5a5a5;
 }
 .nav-header .nav-header-left a:hover{
-    color: rgb(105 139 105);
+    color: rgb(72, 102, 72);
 }
 .nav-header .nav-header-right span{
     margin:0 10px;
@@ -49,9 +55,30 @@
 .nav-header .nav-header-right span:hover{
     color: #000;
 }
-
-
-
+.nav-header .nav-header-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-header .nav-header-center ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-header .nav-header-center ul li{
+  margin: 0 20px;
+}
+.nav-header .nav-header-center ul li a{
+    color: #a5a5a5;
+ }
+ .nav-header .nav-header-center ul li a:hover{
+    color: rgb(72, 102, 72);
+    text-decoration: underline;
+ }
+ .nav-header .nav-header-center ul h1{
+    margin: 0 40px;
+    font-size: 25px;
+ }
 
 /* responsive */
 @media (max-width:500px){
