--- a/style.css
+++ b/style.css
@@ -91,3 +91,27 @@ ul{
         font-size: 10px;
     }
 }
+@media(max-width:1100px){
+    .nav-header .nav-header-center ul h1{
+        margin: 0 30px;
+     }
+     .nav-header .nav-header-center ul li{
+        margin: 0 10px;
+      }
+}
+@media(max-width:1000px){
+    .nav-header .nav-header-center ul h1{
+        margin: 0 10px;
+     }
+     .nav-header .nav-header-center ul li a{
+        font-size: 15px;
+      }
+}
+@media(max-width:900px){
+    .nav-header{
+        justify-content: center;
+    }
+    .nav-header .nav-header-right,.nav-header-left{
+        display: none;
+    }
+}
