--- a/style.css
+++ b/style.css
@@ -79,6 +79,13 @@ ul{
     margin: 0 40px;
     font-size: 25px;
  }
+ .header{
+    width: 100%;
+    height: 100vh;
+    background-image: url('img/header.jpg');
+    background-position: center;
+    background-size: cover;
+ }
 
 /* responsive */
 @media (max-width:500px){
