--- a/style.css
+++ b/style.css
@@ -79,14 +79,36 @@ ul{
     margin: 0 40px;
     font-size: 25px;
  }
+
  .header{
     width: 100%;
     height: 100vh;
     background-image: url('img/header.jpg');
     background-position: center;
     background-size: cover;
+    padding: 20px;
  }
-
+ .header p{
+    color: rgb(72, 102, 72);
+    font-size: 16px;
+    font-weight: 800;
+ }
+ .header h3{
+    font-size: 25px;
+    margin: 10px 0;
+    max-width: 200px;
+ }
+ .header a{
+    color: #fff;
+    background: rgb(72, 102, 72);
+    padding: 8px 12px;
+    border-radius: 10px;
+    margin-top: 10px;
+ }
+ .header a:hover{
+    color: rgb(72, 102, 72);
+    background: #fff;
+ }
 /* responsive */
 @media (max-width:500px){
     .top-header p{
