--- a/style.css
+++ b/style.css
@@ -87,6 +87,13 @@ ul{
     background-position: center;
     background-size: cover;
     padding: 20px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+ }
+ .header div{
+   padding-left: 200px;
  }
  .header div p{
     color: rgb(72, 102, 72);
@@ -97,7 +104,7 @@ ul{
     font-size: 25px;
     margin: 10px 0;
     max-width: 200px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
  }
  .header div a{
     color: #fff;
