--- a/style.css
+++ b/style.css
@@ -148,6 +148,12 @@ ul{
     .nav-header .nav-header-center ul li{
         display: none;
     }
+    .header div p{
+        font-size: 17px;
+    }
+    .header div h3{
+        font-size: 30px;
+    }
 }
 @media(max-width:500px){
     .nav-header .nav-header-right span{
@@ -190,5 +196,11 @@ ul{
     }
     .header div h3 {
         max-width: 300px;
+    }
+}
+@media(max-width:800px){
+    .header div h3 {
+        font-size: 30px;
+        min-width: 200px;
     }
 }
