--- a/style.css
+++ b/style.css
@@ -117,6 +117,27 @@ ul{
     color: rgb(72, 102, 72);
     background: #fff;
  }
+
+ main{
+    width: 100%;
+    height: 100%;
+ }
+ main div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 100px;
+ }
+ main div h1{
+    margin: 10px 0;
+    font-weight: 600;
+    font-size: 25px;
+ }
+ main div p{
+    margin-bottom: 10px;
+    color: #a5a5a5;
+ }
 /* responsive */
 @media (max-width:500px){
     .top-header p{
