--- a/style.css
+++ b/style.css
@@ -141,8 +141,14 @@ ul{
  .gallery{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-   justify-items: center;
+    grid-template-rows: 1fr 1fr;
    padding: 100px;
+ }
+ .gallery img:nth-child(1){
+   grid-column: 1 / span 2;
+ }
+ .gallery img:nth-child(4){
+    grid-column: 3 / span 4;
  }
 /* responsive */
 @media (max-width:500px){
