--- a/style.css
+++ b/style.css
@@ -142,10 +142,18 @@ ul{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: 1fr 1fr;
+   justify-items: center;
    padding: 100px;
+   gap: 10px;
+ }
+ .gallery img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
  }
  .gallery img:nth-child(1){
    grid-column: 1 / span 2;
+   grid-row: 1 / span 3;
  }
  .gallery img:nth-child(4){
     grid-column: 3 / span 4;
