--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ ul{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 15px;
  }
  .gallery img:nth-child(1){
    grid-column: 1 / span 2;
