--- a/style.css
+++ b/style.css
@@ -277,6 +277,19 @@ ul{
     .header div h3{
     max-width: 140px;
     }
+    .gallery img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+        grid-column: 1 / span 4;
+    }
+    .gallery img:nth-child(1){
+        grid-column: 1 / span 4;
+    }
+    .gallery img:nth-child(4){
+       display: none;
+    }
 }
 @media(max-width:300px){
     .header div{
