--- a/style.css
+++ b/style.css
@@ -249,6 +249,12 @@ ul{
     .nav-header .nav-header-right,.nav-header-left{
         display: none;
     }
+    main div p {
+        font-size: 10px !important;
+    }
+    main div h1 {
+        font-size: 22px;
+    }
 }
 @media(max-width:1200px){
     .header div{
@@ -269,14 +275,6 @@ ul{
         font-size: 25px;
         min-width: 100px;
     }
-}
-@media(max-width:600px){
-    .header div {
-        padding-left: 0;
-    }
-    .header div h3{
-    max-width: 140px;
-    }
     .gallery img {
         width: 100%;
         height: 100%;
@@ -291,9 +289,28 @@ ul{
        display: none;
     }
 }
+@media(max-width:600px){
+    .header div {
+        padding-left: 0;
+    }
+    .header div h3{
+    max-width: 140px;
+    }
+  
+}
 @media(max-width:300px){
     .header div{
         width: auto;
         height: auto;
+    }
+}
+@media(max-width:415px){
+    .gallery{
+        padding: 20px;
+    }
+}
+@media(max-width:315px){
+    main div p {
+        font-size: 13px;
     }
 }
