--- a/style.css
+++ b/style.css
@@ -159,6 +159,29 @@ ul{
  .gallery img:nth-child(4){
     grid-column: 3 / span 4;
  }
+
+ .sell{
+    width: 100%;
+    height: 100%;
+ }
+ .sell div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 10px;
+ }
+ .sell div h1{
+    margin: 10px 0;
+    font-weight: 600;
+    font-size: 25px;
+ }
+ .sell div p{
+    margin-bottom: 10px;
+    color: #a5a5a5;
+    text-align: center;
+    max-width: 400px;
+ }
 /* responsive */
 @media (max-width:500px){
     .top-header p{
