--- a/style.css
+++ b/style.css
@@ -245,6 +245,9 @@ ul{
     .header div h3{
         text-align: center;
     }
+    .sell div p {
+        max-width: 200px;
+    }
 }
 @media(max-width:450px){
     .nav-header .nav-header-center ul h1 {
@@ -277,6 +280,11 @@ ul{
     }
     main div h1 {
         font-size: 22px;
+    }
+    .sell div p {
+        max-width: 200px;
+        font-size: 10px;
+        padding:0px 10px;
     }
 }
 @media(max-width:1200px){
