--- a/style.css
+++ b/style.css
@@ -219,11 +219,12 @@ main div p {
 }
 .products .card p{
     color: #262626;
-    font-size: 16px;
+    font-size: 10px;
     margin-top: 10px;
 }
 .products .card h3{
     color: #535353;
+    font-size: 12px;
 }
 .products .card .stars{
     display: flex;
@@ -232,12 +233,19 @@ main div p {
     flex-direction: row;
 }
 .products .card .stars span{
-    font-size: 13px;
+    font-size: 10px;
     color:#252525;
     margin: 0 2px;
 }
 .products .card:nth-child(1) .stars span:nth-child(4){
     color: #696969;
+}
+.products .card .imgbox {
+    background: #c9c9c9;
+    width: 150px;
+    height: 200px;
+    padding: 10px;
+    border-radius: 10px;
 }
 /* responsive */
 @media (max-width:500px) {
