--- a/style.css
+++ b/style.css
@@ -191,16 +191,22 @@ main div p {
 .sell {
     width: 100%;
     height: 100%;
+
 }
 
 .sell div {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-wrap: wrap;
     padding-top: 10px;
 }
-
+.sell .title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .sell div h1 {
     margin: 10px 0;
     font-weight: 600;
@@ -213,9 +219,16 @@ main div p {
     text-align: center;
     max-width: 400px;
 }
-.products{
+.sell .products{
     margin-top: 20px;
     padding: 10px;
+}
+.products .card{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    margin: 0 10px;
 }
 .products .card p{
     color: #262626;
