--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ main div p {
 .sell {
     width: 100%;
     height: 100%;
-
+  padding-bottom: 100px;
 }
 
 .sell div {
@@ -251,6 +251,12 @@ main div p {
     margin: 0 2px;
 }
 .products .card:nth-child(1) .stars span:nth-child(4){
+    color: #696969;
+}
+.products .card:nth-child(2) .stars span:nth-child(4), .products .card:nth-child(2) .stars span:nth-child(3){
+    color: #696969;
+}
+.products .card:nth-child(3) .stars span:nth-child(4){
     color: #696969;
 }
 .products .card .imgbox {
