--- a/style.css
+++ b/style.css
@@ -324,6 +324,9 @@ footer .sec{
     .top-header p {
         font-size: 10px;
     }
+    footer .sec span{
+        font-size: 20px;
+    }
 }
 
 @media(max-width:1100px) {
