--- a/style.css
+++ b/style.css
@@ -452,6 +452,9 @@ footer .sec{
         font-size: 10px;
         padding: 0px 10px;
     }
+    footer .sec span{
+        font-size: 15px;
+    }
 }
 
 @media(max-width:1200px) {
