--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+ body{
+        font-family: "Patrick Hand", cursive;
+        font-weight: 400;
+        font-style: normal;      
+ }
 a {
     text-decoration: none;
 }
